add icons&componentinfo, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -48,3 +48,66 @@ fall_guys:
 
 skru:
   - com.skrew.skroo.skru/com.skrew.skroo.skru.MainActivity
+
+carta:
+  - com.esharesinc.android/com.esharesinc.android.splash.SplashActivity
+
+chargepoint:
+  - com.coulombtech/com.cp.ui.activity.launcher.LauncherActivity
+
+fpl:
+  - com.nee.fpl/com.nee.fpl.uimodule.loginfingerprint.LaunchActivity
+
+garmin_messenger:
+  - com.garmin.android.apps.messenger/com.garmin.android.apps.messenger.activity.MainActivity
+
+guardian_dental_vision:
+  - com.glic.group.ga.mobile/com.glic.group.ga.mobile.Activity.MainActivity
+
+hydrawise:
+  - com.hunterindustries.hydrawise/com.hunterindustries.hydrawise.SplashActivity
+
+la_fitness_mobile:
+  - com.lafitness.lafitness/com.lafitness.lafitness.navigation.StartUpActivity
+
+looker_mobile:
+  - com.google.looker/com.looker.droid.flows.launch.LaunchActivity
+
+marketwatch:
+  - com.marketwatch/com.marketwatch.ui.MainActivity
+
+mymind:
+  - com.mymind.access/com.mymind.access.activities.MainActivity
+
+my_leviton:
+  - com.leviton.home/com.leviton.home.MainActivity
+
+pbs_kids_games:
+  - org.pbskids.gamesapp/org.pbskids.gamesapp.MainActivity
+
+pixel_screenshots:
+  - com.google.android.apps.pixel.agent/com.google.android.apps.pixel.agent.app.ui.browser.BrowserActivity
+
+rippling:
+  - com.people.rippling/com.people.rippling.MainActivity
+
+schlage_home:
+  - com.allegion.leopard/com.allegion.leopard.activities.SchlageSplashActivity
+
+schoolpass:
+  - com.schoolpass.psa/crc64db4b9c00a1a394aa.App_AppActivity
+
+silverspot:
+  - nz.co.vista.android.movie.silverspot/nz.co.vista.android.movie.abc.feature.splash.SplashActivity
+
+simply_wall_st:
+  - com.simplywallst.app/com.simplywallst.app.MainActivity
+
+smart_home_manager:
+  - com.att.shm/com.att.shm.activities.HaloCLoginActivity
+
+truth_social:
+  - com.truthsocial.android.app/com.truthsocial.app.features.startup.TruthActivity
+
+volvo_cars:
+  - se.volvo.vcc/se.volvo.vcc.ui.activities.route.RouteActivity
