Add "Nothing Icon Pack" icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -111,3 +111,6 @@ truth_social:
 
 volvo_cars:
   - se.volvo.vcc/se.volvo.vcc.ui.activities.route.RouteActivity
+
+nothing_icon_pack:
+  - com.jndapp.nothing.white.dots.iconpack/com.jndapp.nothing.white.dots.iconpack.MainActivity
