--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -114,3 +114,6 @@ volvo_cars:
 
 nothing_icon_pack:
   - com.jndapp.nothing.white.dots.iconpack/com.jndapp.nothing.white.dots.iconpack.MainActivity
+
+santa_alc:
+  - co.riiid.vida/co.riiid.vida.ui.splash.SplashActivity
