Update icons.yml (Arcticons)
Day&Night
Light
Material You

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -117,3 +117,16 @@ nothing_icon_pack:
 
 santa_alc:
   - co.riiid.vida/co.riiid.vida.ui.splash.SplashActivity
+
+arcticons_day_and_night:
+  - com.donnnno.arcticons.daynight/com.donnnno.arcticons.activities.MainActivity
+  - com.donnnno.arcticons.daynight.debug/com.donnnno.arcticons.activities.MainActivity
+
+arcticons_light:
+  - com.donnnno.arcticons.light.debug/com.donnnno.arcticons.activities.SplashActivity
+
+arcticons_you:
+  - com.donnnno.arcticons.you.play/com.donnnno.arcticons.activities.SplashActivity
+  - com.donnnno.arcticons.you.play/com.donnnno.arcticons.activities.MainActivity
+  - com.donnnno.arcticons.you.debug/com.donnnno.arcticons.activities.MainActivity
+  - com.donnnno.arcticons.you.play.debug/com.donnnno.arcticons.activities.MainActivity
