Add "trunks" icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -127,3 +127,7 @@ arcticons_you:
   - com.donnnno.arcticons.you.play/com.donnnno.arcticons.activities.MainActivity
   - com.donnnno.arcticons.you.debug/com.donnnno.arcticons.activities.MainActivity
   - com.donnnno.arcticons.you.play.debug/com.donnnno.arcticons.activities.MainActivity
+
+trunks:
+  - com.decad3nce.trunks/com.example.trunks.MainActivity
+  - com.decad3nce.trunks/com.decad3nce.trunks.MainActivity
