--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -111,3 +111,36 @@ truth_social:
 
 volvo_cars:
   - se.volvo.vcc/se.volvo.vcc.ui.activities.route.RouteActivity
+
+arcanechat:
+  - chat.delta.lite/org.thoughtcrime.securesms.RoutingActivity
+
+auto_pickup:
+  - me.huizengek.autopickup/me.huizengek.autopickup.MainActivity
+
+extinguish:
+  - own.moderpach.extinguish/own.moderpach.extinguish.MainActivity
+
+film_time:
+  - io.filmtime/io.filmtime.MainActivity
+
+lyrion:
+  - com.craigd.lmsmaterial.app/com.craigd.lmsmaterial.app.MainActivity
+
+notepad_notes:
+  - com.monospace.notes/com.monospace.notes.MainActivity
+
+recorder_studio_lite:
+  - io.github.leonidius20.recorder.lite/io.github.leonidius20.recorder.MainActivity
+
+sanmer_authenticator:
+  - dev.sanmer.authenticator/dev.sanmer.authenticator.ui.MainActivity
+
+sanmer_github_artifacts:
+  - dev.sanmer.github.artifacts/dev.sanmer.github.artifacts.ui.MainActivity
+
+sanmer_pi:
+  - dev.sanmer.pi/dev.sanmer.pi.ui.MainActivity
+
+webcapture:
+  - com.tawhid.webcapture/com.tawhid.webcapture.MainActivity
