--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -128,6 +128,5 @@ arcticons_you:
   - com.donnnno.arcticons.you.debug/com.donnnno.arcticons.activities.MainActivity
   - com.donnnno.arcticons.you.play.debug/com.donnnno.arcticons.activities.MainActivity
 
-trunks:
-  - com.decad3nce.trunks/com.example.trunks.MainActivity
+trunks_for_mastodon:
   - com.decad3nce.trunks/com.decad3nce.trunks.MainActivity
