--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -144,3 +144,15 @@ sanmer_pi:
 
 webcapture:
   - com.tawhid.webcapture/com.tawhid.webcapture.MainActivity
+
+dolby_atmos:
+  - co.aospa.dolby.xiaomi/co.aospa.dolby.xiaomi.DolbyActivity
+
+selfprivacy:
+  - org.selfprivacy.app/org.selfprivacy.app.MainActivity
+
+lawnchair_launcher:
+  - app.lawnchair.play/app.lawnchair.LawnchairLauncher
+
+lawnicons:
+  - app.lawnchair.lawnicons.play/app.lawnchair.lawnicons.MainActivity
