add icons, credits @leonarrdo on Discord

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -156,3 +156,26 @@ lawnchair_launcher:
 
 lawnicons:
   - app.lawnchair.lawnicons.play/app.lawnchair.lawnicons.MainActivity
+
+baridi_mob:
+  - ru.bpc.mobilebank.bpc/android.svat.bpcbt.com.modulesplash.SplashActivity
+
+e_paiment:
+  - dz.algerietelecom.rd.e_paiement/dz.algerietelecom.rd.e_paiement.Activities.SplashScreenActivity
+
+mangamello:
+  - com.wael.mangamello/com.wael.mangamello.MainActivity
+
+my_idoom:
+  - com.at.dz/com.at.dz.MainActivity
+
+numero:
+  - com.esim.numero/org.linphone.LinphoneLauncherActivity
+
+pythagorea:
+  - com.hil_hk.pythagorea/com.hil_hk.pythagorea.activities.MainActivity
+
+webmoney_keeper:
+  - com.webmoney.my/com.webmoney.my.v3.screen.main.MasterActivity
+
+webmoney_keeper_alt_1: {}
