Add 3 icons and Update icons.yml (#955)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -111,3 +111,22 @@ truth_social:
 
 volvo_cars:
   - se.volvo.vcc/se.volvo.vcc.ui.activities.route.RouteActivity
+
+nothing_icon_pack:
+  - com.jndapp.nothing.white.dots.iconpack/com.jndapp.nothing.white.dots.iconpack.MainActivity
+
+santa_alc:
+  - co.riiid.vida/co.riiid.vida.ui.splash.SplashActivity
+
+arcticons_day_and_night:
+  - com.donnnno.arcticons.daynight/com.donnnno.arcticons.activities.MainActivity
+  - com.donnnno.arcticons.daynight.debug/com.donnnno.arcticons.activities.MainActivity
+
+arcticons_you:
+  - com.donnnno.arcticons.you.play/com.donnnno.arcticons.activities.SplashActivity
+  - com.donnnno.arcticons.you.play/com.donnnno.arcticons.activities.MainActivity
+  - com.donnnno.arcticons.you.debug/com.donnnno.arcticons.activities.MainActivity
+  - com.donnnno.arcticons.you.play.debug/com.donnnno.arcticons.activities.MainActivity
+
+trunks_for_mastodon:
+  - com.decad3nce.trunks/com.decad3nce.trunks.MainActivity
