add icons&componentinfo (#956)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -112,6 +112,73 @@ truth_social:
 volvo_cars:
   - se.volvo.vcc/se.volvo.vcc.ui.activities.route.RouteActivity
 
+arcanechat:
+  - chat.delta.lite/org.thoughtcrime.securesms.RoutingActivity
+
+auto_pickup:
+  - me.huizengek.autopickup/me.huizengek.autopickup.MainActivity
+
+extinguish:
+  - own.moderpach.extinguish/own.moderpach.extinguish.MainActivity
+
+film_time:
+  - io.filmtime/io.filmtime.MainActivity
+
+lyrion:
+  - com.craigd.lmsmaterial.app/com.craigd.lmsmaterial.app.MainActivity
+
+notepad_notes:
+  - com.monospace.notes/com.monospace.notes.MainActivity
+
+recorder_studio_lite:
+  - io.github.leonidius20.recorder.lite/io.github.leonidius20.recorder.MainActivity
+
+sanmer_authenticator:
+  - dev.sanmer.authenticator/dev.sanmer.authenticator.ui.MainActivity
+
+sanmer_github_artifacts:
+  - dev.sanmer.github.artifacts/dev.sanmer.github.artifacts.ui.MainActivity
+
+sanmer_pi:
+  - dev.sanmer.pi/dev.sanmer.pi.ui.MainActivity
+
+webcapture:
+  - com.tawhid.webcapture/com.tawhid.webcapture.MainActivity
+
+dolby_atmos:
+  - co.aospa.dolby.xiaomi/co.aospa.dolby.xiaomi.DolbyActivity
+
+selfprivacy:
+  - org.selfprivacy.app/org.selfprivacy.app.MainActivity
+
+lawnchair_launcher:
+  - app.lawnchair.play/app.lawnchair.LawnchairLauncher
+
+lawnicons:
+  - app.lawnchair.lawnicons.play/app.lawnchair.lawnicons.MainActivity
+
+baridi_mob:
+  - ru.bpc.mobilebank.bpc/android.svat.bpcbt.com.modulesplash.SplashActivity
+
+e_paiment:
+  - dz.algerietelecom.rd.e_paiement/dz.algerietelecom.rd.e_paiement.Activities.SplashScreenActivity
+
+mangamello:
+  - com.wael.mangamello/com.wael.mangamello.MainActivity
+
+my_idoom:
+  - com.at.dz/com.at.dz.MainActivity
+
+numero:
+  - com.esim.numero/org.linphone.LinphoneLauncherActivity
+
+pythagorea:
+  - com.hil_hk.pythagorea/com.hil_hk.pythagorea.activities.MainActivity
+
+webmoney_keeper:
+  - com.webmoney.my/com.webmoney.my.v3.screen.main.MasterActivity
+
+webmoney_keeper_alt_1: {}
 nothing_icon_pack:
   - com.jndapp.nothing.white.dots.iconpack/com.jndapp.nothing.white.dots.iconpack.MainActivity
 
