add icons, credits leonarrdo on Discord

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -179,6 +179,7 @@ webmoney_keeper:
   - com.webmoney.my/com.webmoney.my.v3.screen.main.MasterActivity
 
 webmoney_keeper_alt_1: {}
+
 nothing_icon_pack:
   - com.jndapp.nothing.white.dots.iconpack/com.jndapp.nothing.white.dots.iconpack.MainActivity
 
@@ -197,3 +198,18 @@ arcticons_you:
 
 trunks_for_mastodon:
   - com.decad3nce.trunks/com.decad3nce.trunks.MainActivity
+
+
+afk_journey:
+  - com.farlightgames.igame.gp/com.farlightgames.igame.SplashActivity
+
+music_speed_changer:
+  - com.smp.musicspeed/com.smp.musicspeed.MainActivity
+
+redotpay:
+  - com.redotpay/com.redotpay.MainActivity
+
+redotpay_alt_1: {}
+
+solo_leveling_arise:
+  - com.netmarble.sololv/com.netmarble.sololv.SLUnityPlayerActivity
