--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -213,3 +213,33 @@ redotpay_alt_1: {}
 
 solo_leveling_arise:
   - com.netmarble.sololv/com.netmarble.sololv.SLUnityPlayerActivity
+
+dayforce:
+  - com.dayforce.mobile/com.dayforce.mobile.ui_login.SSOLoginHandlerActivity
+
+digitales_amt:
+  - at.gv.oe.app/at.gv.oe.app.MainActivity
+
+ogn_ar_viewer:
+  - me.testcase.ognarviewer/me.testcase.ognarviewer.MainActivity
+
+point:
+  - jp.co.ccc.Tsite/jp.co.ccc.tapps.SplashActivity
+
+regina_maria:
+  - com.tremend.reginamaria/com.tremend.reginamaria.presentation.features.splash.SplashActivity
+
+siyuan:
+  - org.b3log.siyuan/org.b3log.siyuan.BootActivity
+
+s_mobiili:
+  - fi.spankki/fi.spankki.activity.SplashScreenActivity
+
+twili_recipes:
+  - net.curiana.recipes/net.curiana.recipes.MainActivity
+
+ukg_dimensions:
+  - com.kronos.dimensions.enterprise/com.kronos.dimensions.enterprise.MainActivity
+
+whatsave:
+  - com.simplified.wsstatussaver/com.simplified.wsstatussaver.activities.StatusesActivity
