--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -243,3 +243,9 @@ ukg_dimensions:
 
 whatsave:
   - com.simplified.wsstatussaver/com.simplified.wsstatussaver.activities.StatusesActivity
+
+samsung_smart_switch:
+  - com.sec.android.easyMover/com.sec.android.easyMover.ui.launch.LauncherActivity
+
+money_manager_eab:
+  - com.realbyteapps.moneya/com.realbyteapps.moneya.MMRealAActivity
