add icons&componentinfo (#957)
* add icons, credits leonarrdo on Discord

* add icons

* add componentinfo

* add also kofi, paypal now available

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -179,6 +179,7 @@ webmoney_keeper:
   - com.webmoney.my/com.webmoney.my.v3.screen.main.MasterActivity
 
 webmoney_keeper_alt_1: {}
+
 nothing_icon_pack:
   - com.jndapp.nothing.white.dots.iconpack/com.jndapp.nothing.white.dots.iconpack.MainActivity
 
@@ -197,3 +198,54 @@ arcticons_you:
 
 trunks_for_mastodon:
   - com.decad3nce.trunks/com.decad3nce.trunks.MainActivity
+
+
+afk_journey:
+  - com.farlightgames.igame.gp/com.farlightgames.igame.SplashActivity
+
+music_speed_changer:
+  - com.smp.musicspeed/com.smp.musicspeed.MainActivity
+
+redotpay:
+  - com.redotpay/com.redotpay.MainActivity
+
+redotpay_alt_1: {}
+
+solo_leveling_arise:
+  - com.netmarble.sololv/com.netmarble.sololv.SLUnityPlayerActivity
+
+dayforce:
+  - com.dayforce.mobile/com.dayforce.mobile.ui_login.SSOLoginHandlerActivity
+
+digitales_amt:
+  - at.gv.oe.app/at.gv.oe.app.MainActivity
+
+ogn_ar_viewer:
+  - me.testcase.ognarviewer/me.testcase.ognarviewer.MainActivity
+
+point:
+  - jp.co.ccc.Tsite/jp.co.ccc.tapps.SplashActivity
+
+regina_maria:
+  - com.tremend.reginamaria/com.tremend.reginamaria.presentation.features.splash.SplashActivity
+
+siyuan:
+  - org.b3log.siyuan/org.b3log.siyuan.BootActivity
+
+s_mobiili:
+  - fi.spankki/fi.spankki.activity.SplashScreenActivity
+
+twili_recipes:
+  - net.curiana.recipes/net.curiana.recipes.MainActivity
+
+ukg_dimensions:
+  - com.kronos.dimensions.enterprise/com.kronos.dimensions.enterprise.MainActivity
+
+whatsave:
+  - com.simplified.wsstatussaver/com.simplified.wsstatussaver.activities.StatusesActivity
+
+samsung_smart_switch:
+  - com.sec.android.easyMover/com.sec.android.easyMover.ui.launch.LauncherActivity
+
+money_manager_eab:
+  - com.realbyteapps.moneya/com.realbyteapps.moneya.MMRealAActivity
