--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,66 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+apple_music_classical:
+  - com.apple.android.music.classical/com.apple.android.music.classical.app.features.launcherscreen.ui.LauncherActivity
+
+aurora_pass:
+  - aurora.pass.android.app/aurora.pass.android.app.MainActivity
+
+autobarcode:
+  - com.joaomgcd.barcode/com.joaomgcd.autoapps.ActivityLaunchApp
+
+boursobank:
+  - com.boursorama.android.clients/android.app.src.main.kotlin.com.boursorama.android.clients.MainActivity
+
+edenred_plus:
+  - com.edenred.eq.smarter/com.edenred.eq.smarter.MainActivity
+
+etesync_notes:
+  - com.etesync.notes/com.etesync.notes.MainActivity
+
+fiction_reborn:
+  - fictionreborn.kustom.pack/org.kustom.api.dashboard.DashboardActivity
+
+graphhopper_maps:
+  - com.graphhopper.maps/com.graphhopper.maps.MainActivity
+
+haraj:
+  - com.haraj.app/com.haraj.app.main.MainActivity
+
+hollow_knight:
+  - com.TeamCherry.HollowKnight/com.unity3d.player.UnityPlayerActivity
+
+identite_numerique_la_poste:
+  - fr.laposte.idn/fr.laposte.idn.entrypoints.LauncherEntrypoint
+
+juventus:
+  - com.juventus.app.android/com.juventus.club.MainClubActivity
+
+notepad_spend_apps:
+  - com.splendapps.adler/com.splendapps.adler.MainActivity
+
+nothing_icon_pack_adaptive:
+  - com.nothing.icon.free/com.nothing.icon.free.MainActivity
+
+printify:
+  - com.printify.printify/com.printify.printify.MainActivity
+
+regal:
+  - com.fandango.regal/com.fandango.regal.activity.LauncherActivity
+
+retro_mode_icon_pack:
+  - app.moertel.retro.iconpack.neon/app.moertel.retro.iconpack.activities.SplashActivity
+
+salaam:
+  - com.samsung.msci.aceh/com.samsung.msci.aceh.view.TCActivity
+
+trn:
+  - network.tracker.app/network.tracker.app.MainActivity
+
+wasted:
+  - me.lucky.wasted/me.lucky.wasted.MainActivity
+
+xfinity:
+  - com.xfinity.digitalhome/com.xfinity.digitalhome.features.launch.splash.SplashActivity
