--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -71,3 +71,106 @@ wasted:
 
 xfinity:
   - com.xfinity.digitalhome/com.xfinity.digitalhome.features.launch.splash.SplashActivity
+
+burger_king:
+  - de.burgerking.kingfinder/rbi.android.app.Launcher
+
+marvel_snap:
+  - com.nvsgames.snap/com.nvgames.snap.player.CubePlayerActivity
+
+cheapflights:
+  - com.cf.flightsearch/com.kayak.android.splash.SplashActivity
+
+usaa:
+  - com.usaa.mobile.android.usaa/com.usaa.mobile.android.app.entry.view.MainEntryActivity
+
+camera:
+  - com.ss.android.ugc.aweme/com.android.camera.CameraLauncher
+  - com.android.MGC_9_2_113/com.android.camera.CameraLauncher
+
+phonograph:
+  - player.phonograph.plus/player.phonograph.ui.activities.LauncherActivity
+
+twitter:
+  - com.twitter.aeromod/com.twitter.aeromod.StartActivity
+
+peacock:
+  - com.peacocktv.peacockandroid/com.nowtv.view.activity.manhattan.MainActivity
+
+google_pixel_watch:
+  - com.google.android.apps.wear.companion/com.google.android.apps.wear.companion.core.application.RootActivity
+
+proton_vpn:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingDark
+
+dolphin_emulator:
+  - org.dolphinemu.mmjr/org.dolphinemu.dolphinemu.ui.main.
+  
+imo:
+  - com.imo.android.imoimlite/com.imo.android.imoim.activities.Home
+  - com.imo.android.imoim/com.imo.android.imoim.home.Home
+
+clock:
+  - com.motorola.cn.deskclock/com.motorola.cn.deskclock.DeskClock
+
+google_authenticator:
+  - com.google.android.apps.authenticator2/com.google.android.apps.authenticator2.main.
+  
+one_plus_sound_recorder:
+  - com.oneplus.soundrecorder/com.soundrecorder.browsefile.BrowseFile
+
+sube:
+  - com.sube.app/com.sube.app.MainActivity
+
+zedge:
+  - net.zedge.android/net.zedge.android.MainOlympics
+
+john_gba:
+  - com.johnemulators.johngba/com.johnemulators.activity.RomListActivity
+
+amazon:
+  - in.amazon.mShop.android.shopping/com.amazon.mShop.amazonpay.AmazonPayHomeActivityAlias
+
+yuka:
+  - io.yuka.android/io.yuka.android.main.RootActivity
+
+lichess:
+  - org.lichess.mobileV2/org.lichess.mobileV2.MainActivity
+
+onlyoffice_documents:
+  - com.onlyoffice.documents/app.editors.manager.ui.activities.main.MainActivity
+
+minecraft:
+  - com.mojang.minecraftpe/com.aiwu.Splash
+  - com.mojang.minecraftpe.patch/com.mojang.minecraftpe.MainActivity
+
+godot:
+  - org.godotengine.editor.v4/org.godotengine.editor.GodotEditor
+
+malwarebytes:
+  - org.malwarebytes.antimalware/org.malwarebytes.antimalware.ui.MainActivity
+
+inure:
+  - app.simple.inure.play/app.simple.inure.activities.app.MainActivity
+
+nordnet:
+  - com.nordnet/com.nordnet.MainActivityDark
+
+lufthansa:
+  - com.lufthansa.android.lufthansa/com.lhgroup.lhgroupapp.MainActivity
+
+youtube_revanced_alt_6:
+  - anddea.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+
+santander:
+  - com.santander.app/com.santander.app.splash.AppStartActivity
+  - se.santanderconsumer.mobilebank/com.netbankmobile.
+  
+zomato:
+  - com.application.zomato/com.application.zomato.gold
+
+genshin_impact:
+  - com.hoyoverse.cloudgames.GenshinImpact/com.mihoyo.cloudgame.ui.SplashActivity
+
+airtel:
+  - com.airtel.africa.selfcare/com.airtel.africa.selfcare.feature.login.activity.LoginActivity
