small fix + add icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -165,12 +165,12 @@ youtube_revanced_alt_6:
 santander:
   - com.santander.app/com.santander.app.splash.AppStartActivity
   - se.santanderconsumer.mobilebank/com.netbankmobile.
-  
-zomato:
-  - com.application.zomato/com.application.zomato.gold
 
 genshin_impact:
   - com.hoyoverse.cloudgames.GenshinImpact/com.mihoyo.cloudgame.ui.SplashActivity
 
 airtel:
   - com.airtel.africa.selfcare/com.airtel.africa.selfcare.feature.login.activity.LoginActivity
+
+weeabooify:
+  - kaerushi.weeabooify.ae/kaerushi.weeabooify.ae.MainActivity
