--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,169 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+apple_music_classical:
+  - com.apple.android.music.classical/com.apple.android.music.classical.app.features.launcherscreen.ui.LauncherActivity
+
+aurora_pass:
+  - aurora.pass.android.app/aurora.pass.android.app.MainActivity
+
+autobarcode:
+  - com.joaomgcd.barcode/com.joaomgcd.autoapps.ActivityLaunchApp
+
+boursobank:
+  - com.boursorama.android.clients/android.app.src.main.kotlin.com.boursorama.android.clients.MainActivity
+
+edenred_plus:
+  - com.edenred.eq.smarter/com.edenred.eq.smarter.MainActivity
+
+etesync_notes:
+  - com.etesync.notes/com.etesync.notes.MainActivity
+
+fiction_reborn:
+  - fictionreborn.kustom.pack/org.kustom.api.dashboard.DashboardActivity
+
+graphhopper_maps:
+  - com.graphhopper.maps/com.graphhopper.maps.MainActivity
+
+haraj:
+  - com.haraj.app/com.haraj.app.main.MainActivity
+
+hollow_knight:
+  - com.TeamCherry.HollowKnight/com.unity3d.player.UnityPlayerActivity
+
+identite_numerique_la_poste:
+  - fr.laposte.idn/fr.laposte.idn.entrypoints.LauncherEntrypoint
+
+juventus:
+  - com.juventus.app.android/com.juventus.club.MainClubActivity
+
+notepad_spend_apps:
+  - com.splendapps.adler/com.splendapps.adler.MainActivity
+
+nothing_icon_pack_adaptive:
+  - com.nothing.icon.free/com.nothing.icon.free.MainActivity
+
+printify:
+  - com.printify.printify/com.printify.printify.MainActivity
+
+regal:
+  - com.fandango.regal/com.fandango.regal.activity.LauncherActivity
+
+retro_mode_icon_pack:
+  - app.moertel.retro.iconpack.neon/app.moertel.retro.iconpack.activities.SplashActivity
+
+salaam:
+  - com.samsung.msci.aceh/com.samsung.msci.aceh.view.TCActivity
+
+trn:
+  - network.tracker.app/network.tracker.app.MainActivity
+
+wasted:
+  - me.lucky.wasted/me.lucky.wasted.MainActivity
+
+xfinity:
+  - com.xfinity.digitalhome/com.xfinity.digitalhome.features.launch.splash.SplashActivity
+
+burger_king:
+  - de.burgerking.kingfinder/rbi.android.app.Launcher
+
+marvel_snap:
+  - com.nvsgames.snap/com.nvgames.snap.player.CubePlayerActivity
+
+cheapflights:
+  - com.cf.flightsearch/com.kayak.android.splash.SplashActivity
+
+usaa:
+  - com.usaa.mobile.android.usaa/com.usaa.mobile.android.app.entry.view.MainEntryActivity
+
+camera:
+  - com.ss.android.ugc.aweme/com.android.camera.CameraLauncher
+  - com.android.MGC_9_2_113/com.android.camera.CameraLauncher
+
+phonograph:
+  - player.phonograph.plus/player.phonograph.ui.activities.LauncherActivity
+
+twitter:
+  - com.twitter.aeromod/com.twitter.aeromod.StartActivity
+
+peacock:
+  - com.peacocktv.peacockandroid/com.nowtv.view.activity.manhattan.MainActivity
+
+google_pixel_watch:
+  - com.google.android.apps.wear.companion/com.google.android.apps.wear.companion.core.application.RootActivity
+
+proton_vpn:
+  - ch.protonvpn.android/ch.protonvpn.android.RoutingDark
+
+dolphin_emulator:
+  - org.dolphinemu.mmjr/org.dolphinemu.dolphinemu.ui.main.
+  
+imo:
+  - com.imo.android.imoimlite/com.imo.android.imoim.activities.Home
+  - com.imo.android.imoim/com.imo.android.imoim.home.Home
+
+clock:
+  - com.motorola.cn.deskclock/com.motorola.cn.deskclock.DeskClock
+
+google_authenticator:
+  - com.google.android.apps.authenticator2/com.google.android.apps.authenticator2.main.
+  
+one_plus_sound_recorder:
+  - com.oneplus.soundrecorder/com.soundrecorder.browsefile.BrowseFile
+
+sube:
+  - com.sube.app/com.sube.app.MainActivity
+
+zedge:
+  - net.zedge.android/net.zedge.android.MainOlympics
+
+john_gba:
+  - com.johnemulators.johngba/com.johnemulators.activity.RomListActivity
+
+amazon:
+  - in.amazon.mShop.android.shopping/com.amazon.mShop.amazonpay.AmazonPayHomeActivityAlias
+
+yuka:
+  - io.yuka.android/io.yuka.android.main.RootActivity
+
+lichess:
+  - org.lichess.mobileV2/org.lichess.mobileV2.MainActivity
+
+onlyoffice_documents:
+  - com.onlyoffice.documents/app.editors.manager.ui.activities.main.MainActivity
+
+minecraft:
+  - com.mojang.minecraftpe/com.aiwu.Splash
+  - com.mojang.minecraftpe.patch/com.mojang.minecraftpe.MainActivity
+
+godot:
+  - org.godotengine.editor.v4/org.godotengine.editor.GodotEditor
+
+malwarebytes:
+  - org.malwarebytes.antimalware/org.malwarebytes.antimalware.ui.MainActivity
+
+inure:
+  - app.simple.inure.play/app.simple.inure.activities.app.MainActivity
+
+nordnet:
+  - com.nordnet/com.nordnet.MainActivityDark
+
+lufthansa:
+  - com.lufthansa.android.lufthansa/com.lhgroup.lhgroupapp.MainActivity
+
+youtube_revanced_alt_6:
+  - anddea.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+
+santander:
+  - com.santander.app/com.santander.app.splash.AppStartActivity
+  - se.santanderconsumer.mobilebank/com.netbankmobile.
+
+genshin_impact:
+  - com.hoyoverse.cloudgames.GenshinImpact/com.mihoyo.cloudgame.ui.SplashActivity
+
+airtel:
+  - com.airtel.africa.selfcare/com.airtel.africa.selfcare.feature.login.activity.LoginActivity
+
+weeabooify:
+  - kaerushi.weeabooify.ae/kaerushi.weeabooify.ae.MainActivity
