--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -174,3 +174,27 @@ airtel:
 
 weeabooify:
   - kaerushi.weeabooify.ae/kaerushi.weeabooify.ae.MainActivity
+
+maxrewards:
+  - com.maxrewards/com.maxrewards.MainActivity
+
+my_aurora_forecast:
+  - com.jrustonapps.myauroraforecastpro/com.jrustonapps.myauroraforecast.controllers.MainActivity
+
+screenie:
+  - com.app.screenie/com.app.screenie.SplashActivity
+
+snapper_mobile:
+  - nz.co.snapper.mobile/nz.co.snapper.mobile.ui.MainActivity
+
+square_invoices:
+  - com.squareup.invoicesapp/com.squareup.ui.PaymentActivity
+
+ten_ten:
+  - com.tenten.app/tenten.app.MainActivity
+
+unieuro:
+  - it.unieuro.unieuro/it.unieuro.unieuro.MainActivity
+
+_1track:
+  - one.track.app/com.onetrackapp.MainActivity
