add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -201,3 +201,15 @@ _1track:
 
 kfc:
   - com.yum.colonelsclub/com.kfc.MainActivity
+
+banafo_transcript:
+  - com.banafo.app/com.banafo.app.presentation.screens.InitActivity
+
+chuchel:
+  - air.com.amanitadesign.chuchel.gp/air.com.amanitadesign.chuchel.gp.AIRAppEntry
+
+clickshare:
+  - com.barco.clickshare.presenter/com.barco.clickshare2.OnBoardingActivity
+
+fucks_given:
+  - rocks.poopjournal.fucksgiven/rocks.poopjournal.fucksgiven.MainActivity
