Add first_aid ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -9,6 +9,9 @@
 # new_icon_2_alt_1: {}
 #
 
+first_aid:
+  - com.cube.gdpc.fa/com.cube.gdpc.fa.activities.BootActivity
+
 apple_music_classical:
   - com.apple.android.music.classical/com.apple.android.music.classical.app.features.launcherscreen.ui.LauncherActivity
 
