new icon: Update Locker

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -216,3 +216,6 @@ clickshare:
 
 fucks_given:
   - rocks.poopjournal.fucksgiven/rocks.poopjournal.fucksgiven.MainActivity
+
+update_locker:
+  - ru.mike.updatelocker/ru.mike.updatelocker.ui.MainActivity
