new icon: Hiddify

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -219,3 +219,6 @@ fucks_given:
 
 update_locker:
   - ru.mike.updatelocker/ru.mike.updatelocker.ui.MainActivity
+
+hiddify:
+  - app.hiddify.com/com.hiddify.hiddify.MainActivity
