add missing compinfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -222,3 +222,27 @@ update_locker:
 
 hiddify:
   - app.hiddify.com/com.hiddify.hiddify.MainActivity
+
+pixeldroid:
+  - org.pixeldroid.app/org.pixeldroid.app.main.MainActivity
+
+ikk_classic:
+  - de.ikkclassic.one/de.bitmarck.bitone.ui.splashscreen.RoutingActivityIkkClassic
+
+ikk_classic_epa:
+  - com.rise_world.epa.ikkClassic/com.rise_world.epa.ui.sdk.ui.splash.SplashActivity
+
+garena:
+  - com.garena.game.kgvn/com.garena.game.kgtw.SGameActivity
+
+rossmann:
+  - de.rossmann.app.android/de.rossmann.app.android.ui.splash.SplashScreen
+
+rossmann_fotowelt:
+  - de.rossmann.fotowelt/ai.photobook.aibooks.screen.LaunchPhotocardActivity
+
+sber_bank_alt_1:
+  - ru.bluecat.sberbankpatcher/ru.bluecat.sberbankpatcher.Home
+
+gosuslugi_culture:
+  - ru.gosuslugi.culture/ru.gosuslugi.culture.main.presentation.splash.SplashScreenActivity
