new icon: Yoo Kassa (ЮKassa)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -246,3 +246,6 @@ sber_bank_alt_1:
 
 gosuslugi_culture:
   - ru.gosuslugi.culture/ru.gosuslugi.culture.main.presentation.splash.SplashScreenActivity
+
+yoo_kassa:
+  - ru.yoo.kassa/ru.yoo.kassa.rootScreen.view.RootActivity
