--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -249,3 +249,6 @@ gosuslugi_culture:
 
 yoo_kassa:
   - ru.yoo.kassa/ru.yoo.kassa.rootScreen.view.RootActivity
+
+habr:
+  - ru.habrahabr/ru.habrahabr.ui.activities.WebviewActivity
