new icon: Apktool M

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -252,3 +252,6 @@ yoo_kassa:
 
 habr:
   - ru.habrahabr/ru.habrahabr.ui.activities.WebviewActivity
+
+apktool_m:
+  - ru.maximoff.apktool/ru.maximoff.apktool.SplashActivity
