new icon: ExifTool

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -255,3 +255,6 @@ habr:
 
 apktool_m:
   - ru.maximoff.apktool/ru.maximoff.apktool.SplashActivity
+
+exiftool:
+  - ru.al.exiftool/ru.al.exiftool.MainActivity
