new compinfo: Pixel Pie Icon Pack

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -258,3 +258,6 @@ apktool_m:
 
 exiftool:
   - ru.al.exiftool/ru.al.exiftool.MainActivity
+
+pixel_pie_icon_pack:
+  - ru.pt.iconpack.pixel/ru.pt.iconpack.pixel.activities.MainActivity
