new icon: SOGAZ (СОГАЗ)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -261,3 +261,6 @@ exiftool:
 
 pixel_pie_icon_pack:
   - ru.pt.iconpack.pixel/ru.pt.iconpack.pixel.activities.MainActivity
+
+sogaz:
+  - ru.sogaz.app/ru.sogaz.app.feature_splash.SplashActivity
