new icon: Gosuslugi Key (Госключ)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -264,3 +264,6 @@ pixel_pie_icon_pack:
 
 sogaz:
   - ru.sogaz.app/ru.sogaz.app.feature_splash.SplashActivity
+
+gosuslugi_key:
+  - ru.gosuslugi.goskey/idpoint.application.MainActivity
