Add additional ComponentInfos for malwarebytes

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -152,6 +152,8 @@ godot:
 
 malwarebytes:
   - org.malwarebytes.antimalware/org.malwarebytes.antimalware.ui.MainActivity
+  - org.malwarebytes.antimalware/org.malwarebytes.antimalware.ui.RoutingActivity
+  - org.malwarebytes.antimalware/org.malwarebytes.antimalware.common.activity.PreScreeningActivity
 
 inure:
   - app.simple.inure.play/app.simple.inure.activities.app.MainActivity
