--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -317,3 +317,10 @@ snapcast:
 
 x_icon_changer:
   - io.hexman.xiconchanger/io.hexman.xiconchanger.activity.SplashActivity
+
+samsung_max:
+  - com.samsung.max.go/com.opera.max.ui.v2.MainActivity
+
+loklok:
+  - com.tarparos.phigaea/com.tarparos.phigaea.MainActivity
+  - com.bergel.tauros/com.bergel.tauros.MainActivity
