Add icons&compentinfo (#963)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -269,3 +269,58 @@ sogaz:
 
 gosuslugi_key:
   - ru.gosuslugi.goskey/idpoint.application.MainActivity
+
+accident_book:
+  - io.aiddevs.verbandbuch/io.aiddevs.verbandbuch.MainActivity
+
+ambulance_victoria:
+  - au.gov.vic.ambulance.cpgpublic/au.gov.vic.ambulance.cpgpublic.MainActivity
+
+animestream:
+  - app.animestream/app.animestream.MainActivity
+
+antisplit_m:
+  - com.abdurazaaqmohammed.AntiSplit/com.abdurazaaqmohammed.AntiSplit.main.MainActivity
+
+banrisul:
+  - br.com.banrisul/bergs.pwx.pwxpgnja.view.Pwxpgnja_AtividadePrincipal
+
+beautycam:
+  - com.meitu.meiyancamera/com.meitu.myxj.home.activity.NewHomeActivity
+
+blurrr:
+  - ai.blurrr.video/ai.blurrr.video.MainActivity
+
+cpu_info:
+  - com.kgurgul.cpuinfo/com.kgurgul.cpuinfo.features.HostActivity
+
+daily_board:
+  - com.samsung.android.homemode/com.samsung.android.homemode.ui.activity.main.HomeModeIconActivity
+
+darwinbox:
+  - com.darwinbox.darwinbox/com.darwinbox.splashscreen.ui.SplashScreenActivity
+
+file_explorer_compose:
+  - com.raival.compose.file.explorer/com.raival.compose.file.explorer.screen.main.MainActivity
+
+hattrick:
+  - org.hattrick.hattrick/org.hattrick.hattrick.MainActivity
+
+lifetap:
+  - com.lifetap/com.lifetap.MainActivity
+
+sengled_home:
+  - com.sengled.life2/com.sengled.life2.MainActivity
+
+snapcast:
+  - de.badaix.snapcast/de.badaix.snapcast.MainActivity
+
+x_icon_changer:
+  - io.hexman.xiconchanger/io.hexman.xiconchanger.activity.SplashActivity
+
+samsung_max:
+  - com.samsung.max.go/com.opera.max.ui.v2.MainActivity
+
+loklok:
+  - com.tarparos.phigaea/com.tarparos.phigaea.MainActivity
+  - com.bergel.tauros/com.bergel.tauros.MainActivity
