Add icon for BWS

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -10,3 +10,6 @@
 #
 hulu:
   - jp.happyon.android/jp.happyon.android.ui.activity.TopActivity
+  
+bws:
+  - au.com.bws/au.com.bws.launch.SplashActivity
