add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,3 +13,18 @@ hulu:
   
 bws:
   - au.com.bws/au.com.bws.launch.SplashActivity
+
+datev_smart_login:
+  - de.datev.smartlogin/de.datev.smartlogin.MainActivity
+
+datev_upload_mobil:
+  - de.datev.belegtransfer/de.datev.belegtransfer.MainActivity
+
+deutschlandticket_de_app:
+  - de.deutschlandticket.app/de.deutschlandticket.app.MainActivity
+
+technisat_connect:
+  - com.technisat.multiplay.main/com.technisat.multiplay.main.TechniHomeStartActivity
+
+warframe_market:
+  - pwa.dummy/pwa.dummy
