--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -61,3 +61,6 @@ wiz_connected:
 
 zigi:
   - gt.com.bi.zigi/gt.com.bi.zigi.MainActivity
+
+myntra:
+  - com.myntra.android/com.myntra.android.activities.react.ReactActivity
