add icons, credits Manzobanzo on discord

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -64,3 +64,8 @@ zigi:
 
 myntra:
   - com.myntra.android/com.myntra.android.activities.react.ReactActivity
+
+qatar_airways:
+  - com.m.qr/com.m.qr.home.onboarding.ui.MainActivityLauncher
+
+qatar_airways_alt_1: {}
