Add icons&componentinfo (#967)
* add icons

* add componentinfo

* add icons, credits Manzobanzo on discord

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,3 +28,44 @@ technisat_connect:
 
 warframe_market:
   - pwa.dummy/pwa.dummy
+
+access_by_kai:
+  - com.kai.kaiticketing/com.kai.kaiticketing.MainActivity
+
+dna_launcher:
+  - com.atlantis.launcher/com.atlantis.launcher.home.HomeActivity
+
+ecovacs_home:
+  - com.eco.global.app/com.eco.main.activity.EcoLauncherActivity
+
+farhan:
+  - ly.com.tahaben.farhan/ly.com.tahaben.farhan.MainActivity
+
+geode:
+  - com.geode.launcher/com.geode.launcher.MainActivity
+
+jbl_partybox:
+  - com.jbl.partybox/com.harman.jbl.partybox.ui.welcome.WelcomeFlowActivity
+
+mb_bank:
+  - com.mbmobile/io.flutter.plugins.MainActivity
+
+star_wars_galaxy_of_heroes:
+  - com.ea.game.starwarscapital_row/com.ea.games.capitalgames.CapitalGamesActivity
+
+thrift_savings_plan:
+  - com.thriftsavingsplan.tsp/crc649435415b1c7c6b8b.MainActivity
+
+wiz_connected:
+  - com.wizconnected.wiz2/com.wizconnected.wiz2.MainActivity
+
+zigi:
+  - gt.com.bi.zigi/gt.com.bi.zigi.MainActivity
+
+myntra:
+  - com.myntra.android/com.myntra.android.activities.react.ReactActivity
+
+qatar_airways:
+  - com.m.qr/com.m.qr.home.onboarding.ui.MainActivityLauncher
+
+qatar_airways_alt_1: {}
