--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -141,3 +141,12 @@ vpass:
 
 willy_weather:
   - au.com.willyweather/au.com.willyweather.features.main.MainActivity
+
+penny:
+  - cz.penny.app/digital.riag.appsolution.MainActivity
+
+bpi:
+  - com.bpi.ng.app/i2e8db294.ifa65f50a.ng.o0f244477.w350f86b3.ff4d43a5e.n60027627
+
+swile:
+  - hr.lunc.client/hr.lunc.client.SplashActivityDefault
