Add icons&componentinfo (#968)
* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -69,3 +69,84 @@ qatar_airways:
   - com.m.qr/com.m.qr.home.onboarding.ui.MainActivityLauncher
 
 qatar_airways_alt_1: {}
+
+amboss_knowledge:
+  - com.amboss.medical.knowledge/de.miamed.amboss.knowledge.splash.SplashActivity
+
+arena_breakout:
+  - com.proximabeta.mf.uamo/com.epicgames.ue4.GameActivity
+
+avant:
+  - inc.zerofinancial.level/inc.zerofinancial.level.app.ui.main.MainActivity
+
+banrural:
+  - org.ctk.bancamovil/org.ctk.bancamovil.MainActivity
+
+bdo_pay:
+  - ph.com.bdo.pay/ph.com.bdo.pay.view.activity.BDOMainActivity
+
+bookfusion:
+  - com.bookfusion.android.reader/com.bookfusion.android.reader.activities.SplashActivity_
+
+carb_manager:
+  - com.wombatapps.carbmanager/com.wombatapps.carbmanager.activities.MainActivity
+
+chance:
+  - com.github.jameshnsears.chance/com.github.jameshnsears.chance.MainActivity
+
+citrine:
+  - com.greenart7c3.citrine/com.greenart7c3.citrine.MainActivity
+
+dollphone_icon_pack:
+  - me.x2gd4.dollphone/me.x2gd4.dollphone.activities.MainActivity
+
+fazilet_calendar:
+  - com.fazilettakvimi.fazilettakvimi/com.fazilettakvimi.fazilettakvimi.feature.main.MainActivity
+
+glinet:
+  - xyz.goodcloud.glinet/xyz.goodcloud.glinet.MainActivity
+
+hios_launcher:
+  - com.transsion.hilauncher/com.android.launcher3.DynamicVirtualEntryActivity
+
+hornbach:
+  - de.hornbach/com.hbapp.MainActivity
+
+minion_rush:
+  - com.gameloft.android.ANMP.GloftDMHM/com.gameloft.android.ANMP.GloftDMHM.MainActivity
+
+monito_expense_manager:
+  - com.monito/com.monito.MainActivity
+
+mynetdiary:
+  - com.fourtechnologies.mynetdiary.ad/com.mynetdiary.auth.AuthActivity
+
+nfc_card_emulator:
+  - com.yuanwofei.cardemulator.pro/com.yuanwofei.cardemulator.MainActivity
+
+online_portal_appfolio:
+  - com.appfolio.resident_portal/com.appfolio.apm_mobile.MainActivity
+
+rank_my_favs:
+  - com.dessalines.rankmyfavs/com.dessalines.rankmyfavs.MainActivity
+
+sefaria:
+  - org.sefaria.sefaria/org.sefaria.sefaria.SplashActivity
+
+stride:
+  - org.stridetasks.stride/org.stridetasks.stride.MainActivity
+
+vpass:
+  - com.smbc_card.vpass/com.smbc_card.vpass.ui.splash.SplashActivity
+
+willy_weather:
+  - au.com.willyweather/au.com.willyweather.features.main.MainActivity
+
+penny:
+  - cz.penny.app/digital.riag.appsolution.MainActivity
+
+bpi:
+  - com.bpi.ng.app/i2e8db294.ifa65f50a.ng.o0f244477.w350f86b3.ff4d43a5e.n60027627
+
+swile:
+  - hr.lunc.client/hr.lunc.client.SplashActivityDefault
