--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,9 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+digipaws:
+  - nethical.digipaws/nethical.digipaws.MainActivity
+
+feedflow:
+  - com.prof18.feedflow/com.prof18.feedflow.android.MainActivity
