icon update: Yandex Go

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -26,3 +26,6 @@ moia:
 
 leo:
   - org.leo.android.dict/org.leo.android.dict.MainActivity
+
+yandex_go:
+  - ru.yandex.taxi/com.yandex.go.activity.alias.Go2024AppIconMainActivityAlias
