--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -14,3 +14,18 @@ digipaws:
 
 feedflow:
   - com.prof18.feedflow/com.prof18.feedflow.android.MainActivity
+
+mmrl:
+  - com.dergoogler.mmrl/com.dergoogler.mmrl.ui.activity.MainActivity
+
+jodel:
+  - com.tellm.android.app/com.jodelapp.jodelandroidv3.features.onboarding.activity.LauncherActivity
+
+moia:
+  - io.moia.neptune/io.moia.neptune.ui.MainActivity
+
+leo:
+  - org.leo.android.dict/org.leo.android.dict.MainActivity
+
+yandex_go:
+  - ru.yandex.taxi/com.yandex.go.activity.alias.Go2024AppIconMainActivityAlias
