--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -29,3 +29,33 @@ leo:
 
 yandex_go:
   - ru.yandex.taxi/com.yandex.go.activity.alias.Go2024AppIconMainActivityAlias
+
+anytime_podcast:
+  - uk.me.amugofjava.anytime/com.ryanheise.audioservice.AudioServiceActivity
+
+exfilac:
+  - com.io7m.exfilac.main/com.io7m.exfilac.main.EFActivity
+
+fediphoto:
+  - com.fediphoto.lineage/com.fediphoto.lineage.StartActivity
+
+firefly:
+  - social.firefly.nightly/social.firefly.MainActivity
+
+habsgleich:
+  - de.codecivil.habsgleich/de.codecivil.habsgleich.MainActivity
+
+infinilist:
+  - uk.sensoryunderload.infinilist/uk.sensoryunderload.infinilist.ListView
+
+labnex:
+  - com.labnex.app/com.labnex.app.activities.MainActivity
+
+lxreader:
+  - io.gitlab.coolreader_ng.lxreader.fdroid/io.gitlab.coolreader_ng.project_s.ReaderActivity
+
+ridgescout:
+  - com.ridgebotics.ridgescout/com.ridgebotics.ridgescout.MainActivity
+
+tilde_friends:
+  - com.unprompted.tildefriends.fdroid/com.unprompted.tildefriends.TildeFriendsActivity
