Add Liieypet icon and Sun Life ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,9 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+sun_life:
+   - com.sunlife.ca.mysunlife/com.sunlife.ca.mysunlife.feature.splashscreen.ui.SplashActivity
+
+liieypet:
+   - com.zhihuiyan.ryryry/com.smart.TuyaSplashActivity
