Add National Bank of Canada icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -14,3 +14,6 @@ sun_life:
 
 liieypet:
    - com.zhihuiyan.ryryry/com.smart.TuyaSplashActivity
+
+national_bank_of_canada:
+   - ca.bnc.android/ca.bnc.android.custom.BncMainActivity
