Add Switch Transfert Tool

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -17,3 +17,6 @@ liieypet:
 
 national_bank_of_canada:
    - ca.bnc.android/ca.bnc.android.custom.BncMainActivity
+
+switch_transfert_tool:
+   - ca.codefusion.switchtransfertool/ca.codefusion.switchtransfertool.SwitchTransferToolActivity
