Add bet365 icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -20,3 +20,6 @@ national_bank_of_canada:
 
 switch_transfert_tool:
    - ca.codefusion.switchtransfertool/ca.codefusion.switchtransfertool.SwitchTransferToolActivity
+
+bet365:
+   - com.bet365SportsCA.Bet365_Application/com.bet365.sportsbook.AppDelegate
