--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -62,3 +62,24 @@ thunderbird:
 
 tuta_calendar:
   - de.tutao.calendar/de.tutao.calendar.MainActivity
+
+hsbc:
+  - uk.co.hsbc.hsbcukmobilebanking/com.hsbc.mobilebanking.splash.SplashActivity
+
+shonen_jump:
+  - com.viz.wsj.android/com.vizmanga.android.vizmangalib.splash.SplashActivity
+
+mega:
+  - mega.privacy.android.app/mega.privacy.android.app.presentation.login.LoginActivity
+
+tv_show_time:
+  - com.tozelabs.tvshowtime/com.tozelabs.tvshowtime.MainActivity
+
+google_gemini:
+  - com.google.android.googlequicksearchbox/com.google.android.apps.search.assistant.surfaces.voice.robin.launcher.RobinEntryPointActivity
+
+vodafone:
+  - com.emeint.android.myservices/com.emeint.android.myservices.ui.screens.splash.DefaultLauncher
+
+phone_pe:
+  - com.phonepe.app/com.phonepe.app.ui.activity.Navigator_MainActivity
