add icons&componentinfo (#974)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -10,10 +10,76 @@
 #
 
 sun_life:
-   - com.sunlife.ca.mysunlife/com.sunlife.ca.mysunlife.feature.splashscreen.ui.SplashActivity
+  - com.sunlife.ca.mysunlife/com.sunlife.ca.mysunlife.feature.splashscreen.ui.SplashActivity
 
 liieypet:
-   - com.zhihuiyan.ryryry/com.smart.TuyaSplashActivity
+  - com.zhihuiyan.ryryry/com.smart.TuyaSplashActivity
 
 national_bank_of_canada:
-   - ca.bnc.android/ca.bnc.android.custom.BncMainActivity
+  - ca.bnc.android/ca.bnc.android.custom.BncMainActivity
+
+app_verifier:
+  - dev.soupslurpr.appverifier/dev.soupslurpr.appverifier.MainActivity
+
+arc_search:
+  - company.thebrowser.arc/company.thebrowser.arc.composable.ArcActivity
+
+azyx:
+  - com.android.azyx/com.android.azyx.MainActivity
+
+bcr_manager:
+  - it.dhd.bcrmanager/it.dhd.bcrmanager.MainActivity
+
+blitz_ai:
+  - com.krishna.blitzai/com.krishna.blitzai.ui.activity.MainActivity
+
+boorusama:
+  - com.degenk.boorusama/com.degenk.boorusama.MainActivity
+
+discover_mobile:
+  - com.discoverfinancial.mobile/pf541ae78.wa3b13fd1.e7dfda19d.o4531864c
+
+frontpage:
+  - in.crowdware.one/in.crowdware.one.ui.LauncherActivity
+
+goblin_tools:
+  - com.goblintools/com.goblintools.MainActivity
+
+grammarly_ai_assistant:
+  - com.grammarly.android.keyboard/com.grammarly.widget.launcher.LauncherActivity
+
+lagrange:
+  - fi.skyjake.lagrange/fi.skyjake.lagrange.LagrangeActivity
+
+qubopro:
+  - com.qubogo.iot/app.qubogo.iot.ui.splash.SplashActivity
+
+suyu:
+  - dev.suyu.suyu_emu/dev.suyu.suyu_emu.ui.main.MainActivity
+
+thunderbird:
+  - net.thunderbird.android.beta/com.fsck.k9.activity.MessageList
+
+tuta_calendar:
+  - de.tutao.calendar/de.tutao.calendar.MainActivity
+
+hsbc:
+  - uk.co.hsbc.hsbcukmobilebanking/com.hsbc.mobilebanking.splash.SplashActivity
+
+shonen_jump:
+  - com.viz.wsj.android/com.vizmanga.android.vizmangalib.splash.SplashActivity
+
+mega:
+  - mega.privacy.android.app/mega.privacy.android.app.presentation.login.LoginActivity
+
+tv_show_time:
+  - com.tozelabs.tvshowtime/com.tozelabs.tvshowtime.MainActivity
+
+google_gemini:
+  - com.google.android.googlequicksearchbox/com.google.android.apps.search.assistant.surfaces.voice.robin.launcher.RobinEntryPointActivity
+
+vodafone:
+  - com.emeint.android.myservices/com.emeint.android.myservices.ui.screens.splash.DefaultLauncher
+
+phone_pe:
+  - com.phonepe.app/com.phonepe.app.ui.activity.Navigator_MainActivity
