--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -83,3 +83,6 @@ vodafone:
 
 phone_pe:
   - com.phonepe.app/com.phonepe.app.ui.activity.Navigator_MainActivity
+
+usertesting:
+  - com.usertesting.recorder.krsna/com.usertesting.recorder.startup.splash.SplashActivity
