--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -113,3 +113,34 @@ tile_shortcuts:
 
 windows_app:
   - com.microsoft.rdc.androidx.beta/com.microsoft.windowsapp.ui.HomeActivity
+
+gta_san_andreas:
+  - com.rockstargames.gtasa/com.rockstargames.gtasa.Downloader
+
+discord:
+  - com.discord/com.discord.main.MainGalaxy
+  - com.discord/com.discord.main.MainController
+
+uniqlo:
+  - com.uniqlo.ph.catalogue/com.uniqlo.ja.catalogue.view.mobile.startup.StartupActivity
+
+telegram_nox:
+  - org.telegram.messenger.beta/org.telegram.messenger.NoxIcon
+
+telegram_turbo:
+  - org.telegram.messenger.web/org.telegram.messenger.TurboIcon
+
+nekogramx:
+  - nekox.messenger.broken/org.telegram.messenger.DefaultIcon
+
+google_wallet:
+  - com.google.android.apps.walletnfcrel/com.google.android.apps.wallet.GooglePayActivity
+
+youtube_music_revanced:
+  - anddea.youtube.music/com.google.android.apps.youtube.music.activities.MusicActivity
+
+cutemusic:
+  - com.sosauce.cutemusic/com.sosauce.cutemusic.main.MainActivity
+
+glovo:
+  - com.glovo/com.glovoapp.onboarding.splash.SplashActivity
